implementation/generated_ASTs/test/test262/tests/language/expressions/assignmenttargettype/parenthesized-identifierreference-arguments-strict.js.esl
function buildAST (___internal_esl_global) {
__n0 := {  };
__n0["type"] := "Program";
__n0["sourceType"] := "script";
__n2 := {  };
__n2["type"] := "ExpressionStatement";
__n3 := {  };
__n3["type"] := "CallExpression";
__n4 := {  };
__n4["type"] := "Identifier";
__n4["name"] := "$DONOTEVALUATE";
__n3["callee"] := __n4;
__n5 := [  ];
__n3["arguments"] := __n5;
__n2["expression"] := __n3;
__n6 := {  };
__n6["type"] := "ExpressionStatement";
__n7 := {  };
__n7["type"] := "Identifier";
__n7["name"] := "_";
__n6["expression"] := __n7;
__n1 := [ __n2, __n6 ];
__n0["body"] := __n1;
__n0["optimised"] := true;
__n8 := [  ];
__n0["variableDeclarations"] := __n8;
__n10 := {  };
__n10["type"] := "FunctionDeclaration";
__n11 := {  };
__n11["type"] := "Identifier";
__n11["name"] := "_";
__n10["id"] := __n11;
__n12 := [  ];
__n10["params"] := __n12;
__n13 := {  };
__n13["type"] := "BlockStatement";
__n15 := {  };
__n15["type"] := "ExpressionStatement";
__n16 := {  };
__n16["type"] := "AssignmentExpression";
__n16["operator"] := "=";
__n17 := {  };
__n17["type"] := "Identifier";
__n17["name"] := "arguments";
__n16["left"] := __n17;
__n18 := {  };
__n18["type"] := "Literal";
__n18["value"] := 1.;
__n18["raw"] := "1";
__n16["right"] := __n18;
__n15["expression"] := __n16;
__n14 := [ __n15 ];
__n13["body"] := __n14;
__n19 := [  ];
__n13["variableDeclarations"] := __n19;
__n20 := [  ];
__n13["functionDeclarations"] := __n20;
__n13["codeType"] := "function";
__n13["strict"] := false;
__n10["body"] := __n13;
__n10["generator"] := false;
__n10["async"] := false;
__n10["expression"] := false;
__n9 := [ __n10 ];
__n0["functionDeclarations"] := __n9;
__n0["codeType"] := "global";
__n0["strict"] := false;
return ( false, __n0 )
}